--- a/src/main/java/com/algorithm/interviewPlan/202111/01-面试算法规划记录.md
+++ b/src/main/java/com/algorithm/interviewPlan/202111/01-面试算法规划记录.md
@@ -6,55 +6,55 @@
 
 # 二、算法练习记录
 
-| 算法                                                         |                             路径                             | 日期                  | 总次数 | 备注                                 |
-| ------------------------------------------------------------ | :----------------------------------------------------------: | --------------------- | ------ | ------------------------------------ |
-| 快排                                                         |      com.algorithm.learn.sort.quicksort.quickSortClass       | 20211130_1,20220216_2 | 2      | 竟然忘了，需要复习                   |
-| 归并                                                         |      com.algorithm.learn.sort.mergesort.mergeSortClass       | 20211130_1,20220216_2 | 2      | 思路记着，需要复习                   |
-| 输入一个链表，按链表从尾到头的顺序返回一个ArrayList。        |        com.algorithm.learn.Leetcode._01offer.offer03         | 20211130_1            | 1      | 递归、栈                             |
-| 调增数组顺序使奇数位于偶数前面                               |        com.algorithm.learn.Leetcode._01offer.offer13         | 20211130_1            | 1      | 难写，细节多练习                     |
-| 输入一个链表，反转链表后，输出新链表的表头。                 |        com.algorithm.learn.Leetcode._01offer.offer15         | 20211201_1            | 1      |                                      |
-| 2个链表合成后的链表                                          |        com.algorithm.learn.Leetcode._01offer.offer16         | 20211201_1            | 1      |                                      |
-| 输入两棵二叉树A，B，判断B是不是A的子结构。                   |        com.algorithm.learn.Leetcode._01offer.offer17         | 20211201_1            | 1      |                                      |
-| 操作给定的二叉树，将其变换为源二叉树的镜像                   |        com.algorithm.learn.Leetcode._01offer.offer18         | 20211201_1            | 1      |                                      |
-| 从上往下打印出二叉树的每个节点，同层节点从左至右打印。【层序遍历，需要练习】 |        com.algorithm.learn.Leetcode._01offer.offer22         | 20211201_1            | 1      |                                      |
-| 判断该数组是不是某二叉搜索树的后序遍历的结果                 |        com.algorithm.learn.Leetcode._01offer.offer23         | 20211201_1            | 1      |                                      |
-| 二叉树中和为某一值的路径                                     |        com.algorithm.learn.Leetcode._01offer.offer24         | 20211201_1            | 1      | 这个是之前面试kyline的第三道算法题目 |
-|                                                              | com.algorithm.learn.Leetcode._01offer.tree.tree_34_find_path | 20211201_1            | 1      | 有思维图解                           |
-| 输入一棵二叉树，求该树的深度。                               |   com.algorithm.learn.Leetcode._01offer.tree.tree_38_depth   | 20211201_1            | 1      | 【测试通过】                         |
-| 重建二叉树                                                   | com.algorithm.learn.Leetcode._01offer.tree.tree_04_reconstruct | 20211201_1            | 1      | 【课手写】                           |
-| 复杂链表的复制                                               |        com.algorithm.learn.Leetcode._01offer.offer25         | 20211202_1            | 1      |                                      |
-| 最小的K个数                                                  |        com.algorithm.learn.Leetcode._01offer.offer29         | 20211202_1            | 1      | 【优先队列】                         |
-| 把数组排成最小的数                                           |        com.algorithm.learn.Leetcode._01offer.offer32         | 20211202_1            | 1      | Collections.sort                     |
-| 输入两个链表，找出它们的第一个公共结点。                     |        com.algorithm.learn.Leetcode._01offer.offer36         | 20211202_1            | 1      |                                      |
-| 二叉树的深度                                                 |        com.algorithm.learn.Leetcode._01offer.offer38         | 20211202_1            | 1      | 非递归-层序遍历【*】                 |
-| 数组中只出现一次的数字                                       |                                                              |                       |        |                                      |
-| 左旋转字符串                                                 |        com.algorithm.learn.Leetcode._01offer.offer43         | 20211202_1            | 1      | 两种方法                             |
-| 约瑟夫环                                                     |        com.algorithm.learn.Leetcode._01offer.offer46         | 20211202_1            | 1      |                                      |
-| 把字符串转换成整数                                           |        com.algorithm.learn.Leetcode._01offer.offer49         | ======                |        |                                      |
-| 数组中重复的数字                                             |        com.algorithm.learn.Leetcode._01offer.offer50         | 20211202_1            | 1      |                                      |
-| 链表中环的入口结点                                           |        com.algorithm.learn.Leetcode._01offer.offer55         | 20211202_1            | 1      | [没有理解逻辑]                       |
-| 删除链表中重复的节点                                         |        com.algorithm.learn.Leetcode._01offer.offer56         | 20211202_1            | 1      |                                      |
-| 对称的二叉树                                                 |        com.algorithm.learn.Leetcode._01offer.offer58         | 20211202_1            | 1      | 【***】                              |
-| 按之字形顺序打印二叉树                                       |        com.algorithm.learn.Leetcode._01offer.offer59         | 20211202_1            | 1      | 【***】够爽                          |
-| 把二叉树打印成多行                                           |        com.algorithm.learn.Leetcode._01offer.offer60         | 20211202_1            | 1      |                                      |
-| 二叉搜索树的第k个结点                                        |        com.algorithm.learn.Leetcode._01offer.offer62         | 20211202_1            | 1      | [中序遍历]                           |
-| 逆转链表                                                     |        com.algorithm.learn.Leetcode._01offer.offer15         | 20220216_1            | 1      |                                      |
-|                                                              |                                                              |                       |        |                                      |
-|                                                              |                                                              |                       |        |                                      |
-|                                                              |                                                              |                       |        |                                      |
-|                                                              |                                                              |                       |        |                                      |
-|                                                              |                                                              |                       |        |                                      |
-|                                                              |                                                              |                       |        |                                      |
-|                                                              |                                                              |                       |        |                                      |
-|                                                              |                                                              |                       |        |                                      |
-|                                                              |                                                              |                       |        |                                      |
-|                                                              |                                                              |                       |        |                                      |
-|                                                              |                                                              |                       |        |                                      |
-|                                                              |                                                              |                       |        |                                      |
-|                                                              |                                                              |                       |        |                                      |
-|                                                              |                                                              |                       |        |                                      |
-|                                                              |                                                              |                       |        |                                      |
-|                                                              |                                                              |                       |        |                                      |
-|                                                              |                                                              |                       |        |                                      |
-|                                                              |                                                              |                       |        |                                      |
+| 算法                                                         |                             路径                             | 日期                               | 总次数 | 备注                                 |
+| ------------------------------------------------------------ | :----------------------------------------------------------: | ---------------------------------- | ------ | ------------------------------------ |
+| 快排                                                         |      com.algorithm.learn.sort.quicksort.quickSortClass       | 20211130_1,20220216_1              | 2      | 竟然忘了，需要复习                   |
+| 归并                                                         |      com.algorithm.learn.sort.mergesort.mergeSortClass       | 20211130_1,20220216_1              | 2      | 思路记着，需要复习                   |
+| 输入一个链表，按链表从尾到头的顺序返回一个ArrayList。        |        com.algorithm.learn.Leetcode._01offer.offer03         | 20211130_1,20220217_1              | 2      | 递归、栈。递归如何到底               |
+| 调整数组顺序使奇数位于偶数前面                               |        com.algorithm.learn.Leetcode._01offer.offer13         | 20211130_1，20220217_1更新并且提交 | 1      | 难写，细节多练习                     |
+| 输入一个链表，反转链表后，输出新链表的表头。                 |        com.algorithm.learn.Leetcode._01offer.offer15         | 20211201_1                         | 2      |                                      |
+| 2个链表合成后的链表                                          |        com.algorithm.learn.Leetcode._01offer.offer16         | 20211201_1                         | 1      |                                      |
+| 输入两棵二叉树A，B，判断B是不是A的子结构。                   |        com.algorithm.learn.Leetcode._01offer.offer17         | 20211201_1                         | 1      |                                      |
+| 操作给定的二叉树，将其变换为源二叉树的镜像                   |        com.algorithm.learn.Leetcode._01offer.offer18         | 20211201_1,20220217_1              | 2      |                                      |
+| 从上往下打印出二叉树的每个节点，同层节点从左至右打印。【层序遍历，需要练习】 |        com.algorithm.learn.Leetcode._01offer.offer22         | 20211201_1                         | 1      |                                      |
+| 判断该数组是不是某二叉搜索树的后序遍历的结果                 |        com.algorithm.learn.Leetcode._01offer.offer23         | 20211201_1                         | 1      |                                      |
+| 二叉树中和为某一值的路径                                     |        com.algorithm.learn.Leetcode._01offer.offer24         | 20211201_1                         | 1      | 这个是之前面试kyline的第三道算法题目 |
+|                                                              | com.algorithm.learn.Leetcode._01offer.tree.tree_34_find_path | 20211201_1                         | 1      | 有思维图解                           |
+| 输入一棵二叉树，求该树的深度。                               |   com.algorithm.learn.Leetcode._01offer.tree.tree_38_depth   | 20211201_1                         | 1      | 【测试通过】                         |
+| 重建二叉树                                                   | com.algorithm.learn.Leetcode._01offer.tree.tree_04_reconstruct | 20211201_1                         | 1      | 【课手写】                           |
+| 复杂链表的复制                                               |        com.algorithm.learn.Leetcode._01offer.offer25         | 20211202_1                         | 1      |                                      |
+| 最小的K个数                                                  |        com.algorithm.learn.Leetcode._01offer.offer29         | 20211202_1                         | 1      | 【优先队列】                         |
+| 把数组排成最小的数                                           |        com.algorithm.learn.Leetcode._01offer.offer32         | 20211202_1                         | 1      | Collections.sort                     |
+| 输入两个链表，找出它们的第一个公共结点。                     |        com.algorithm.learn.Leetcode._01offer.offer36         | 20211202_1                         | 1      |                                      |
+| 二叉树的深度                                                 |        com.algorithm.learn.Leetcode._01offer.offer38         | 20211202_1                         | 1      | 非递归-层序遍历【*】                 |
+| 数组中只出现一次的数字                                       |                                                              |                                    |        |                                      |
+| 左旋转字符串                                                 |        com.algorithm.learn.Leetcode._01offer.offer43         | 20211202_1                         | 1      | 两种方法                             |
+| 约瑟夫环                                                     |        com.algorithm.learn.Leetcode._01offer.offer46         | 20211202_1                         | 1      |                                      |
+| 把字符串转换成整数                                           |        com.algorithm.learn.Leetcode._01offer.offer49         | ======                             |        |                                      |
+| 数组中重复的数字                                             |        com.algorithm.learn.Leetcode._01offer.offer50         | 20211202_1                         | 1      |                                      |
+| 链表中环的入口结点                                           |        com.algorithm.learn.Leetcode._01offer.offer55         | 20211202_1                         | 1      | [没有理解逻辑]                       |
+| 删除链表中重复的节点                                         |        com.algorithm.learn.Leetcode._01offer.offer56         | 20211202_1                         | 1      |                                      |
+| 对称的二叉树                                                 |        com.algorithm.learn.Leetcode._01offer.offer58         | 20211202_1                         | 1      | 【***】                              |
+| 按之字形顺序打印二叉树                                       |        com.algorithm.learn.Leetcode._01offer.offer59         | 20211202_1                         | 1      | 【***】够爽                          |
+| 把二叉树打印成多行                                           |        com.algorithm.learn.Leetcode._01offer.offer60         | 20211202_1                         | 1      |                                      |
+| 二叉搜索树的第k个结点                                        |        com.algorithm.learn.Leetcode._01offer.offer62         | 20211202_1                         | 1      | [中序遍历]                           |
+| 逆转链表                                                     |        com.algorithm.learn.Leetcode._01offer.offer15         | 20220216_1                         | 1      |                                      |
+|                                                              |                                                              |                                    |        |                                      |
+|                                                              |                                                              |                                    |        |                                      |
+|                                                              |                                                              |                                    |        |                                      |
+|                                                              |                                                              |                                    |        |                                      |
+|                                                              |                                                              |                                    |        |                                      |
+|                                                              |                                                              |                                    |        |                                      |
+|                                                              |                                                              |                                    |        |                                      |
+|                                                              |                                                              |                                    |        |                                      |
+|                                                              |                                                              |                                    |        |                                      |
+|                                                              |                                                              |                                    |        |                                      |
+|                                                              |                                                              |                                    |        |                                      |
+|                                                              |                                                              |                                    |        |                                      |
+|                                                              |                                                              |                                    |        |                                      |
+|                                                              |                                                              |                                    |        |                                      |
+|                                                              |                                                              |                                    |        |                                      |
+|                                                              |                                                              |                                    |        |                                      |
+|                                                              |                                                              |                                    |        |                                      |
+|                                                              |                                                              |                                    |        |                                      |
 
